# dkim-registry

./: .gitignore  README.md  additional_sites.txt  main.py  pyproject.toml  requirements.txt  selectors.txt
templates/: index.html
