[tool.poetry]
name = "repl_nix_Dkim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.65.0"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
SQLAlchemy = "^2.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
